<resources>
    <string name="app_name">Minesweeper</string>
    <string name="Beginner">Beginner</string>
    <string name="Intermediate">Intermediate</string>
    <string name="Expert">Expert</string>
    <string name="textChoose">Choose difficulty:</string>
    <string name="but_start">start game!</string>
    <string name="you_won">you won!</string>
    <string name="you_lose">you lose!</string>
    <string name="but_playAgain">play again!</string>
    <string name="but_exit">exit</string>
    <string name="record_list">Record List</string>
    <string name="massage_broken_record">you"'"ve broken a record!</string>
    <string name="massage_enter_name">Enter your name:</string>
    <string name="but_save">save</string>
    <string name="but_exit_fragment">X</string>
    <string name="name">Name</string>
    <string name="time">Time</string>
    <string name="massage_BOOM">BOOOOOOM</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>


