<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:layout_marginTop="80dp"
    tools:context=".BreakRecordFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/buttonExit"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:background="#FD0606"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:text="@string/but_exit_fragment"/>

        <TextView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:text="@string/massage_broken_record"
        android:textSize="50dp"
        android:paddingTop="20dp"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/massage_enter_name"
        android:gravity="center"
        android:textSize="20dp"/>

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_gravity="center_horizontal"
            android:inputType="textPersonName"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/but_save"
            android:layout_marginTop="20dp"
            android:id="@+id/bottomSaveRecord"
            android:layout_gravity="center" />

</LinearLayout>

</FrameLayout>