<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EndGame">

    <ImageView
        android:src="@drawable/background"
        android:id="@+id/im2"
        android:scaleType="fitXY"
        android:layout_height="match_parent"
        android:layout_width="match_parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:text="@string/you_won"
            android:textColor="#040202"
            android:textSize="60sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/buttonPlayAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/buttonExit"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:minWidth="100dp"
            android:background="@color/play_again_button"
            android:textColor="#FFFFFF"
            android:text="@string/but_playAgain"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="300dp" />

        <Button
            android:id="@+id/buttonExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:minWidth="100dp"
            android:background="@color/exit_button"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="-100dp"
            android:text="@string/but_exit"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="350dp" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>